namespace JMCore.Services.JMCache;

public interface IJMCacheCategories
{
    Dictionary<int, string> All { get; }
}